# good

./: .gitignore  .gitmodules  README.md
cpp/generic-conan/: main.cpp
cpp/generic-mlir-dialect/: .gitignore  CMakeLists.txt  README.md  build.sh
cpp/generic-mlir-dialect/include/Basic/: BasicDialect.h  BasicDialect.td  BasicOps.h  BasicOps.td  BasicTypes.h  BasicTypes.td  CMakeLists.txt
cpp/generic-mlir-dialect/lib/Basic/: BasicDialect.cpp  CMakeLists.txt
cpp/generic-mlir-dialect/lib/Basic/IR/: BasicOps.cpp  BasicTypes.cpp
cpp/templates-sequences/: build.sh
cpp/templates/sequences/: conanfile.txt  main.cpp
py/setup/: setup.py
python/estimators/: .gitignore  setup.py
python/estimators/estimators/: main.py
python/estimators/estimators/eval/: main.py
python/estimators/estimators/models/: bayesian.py  dummy.py  evaluator.py  feature_selection.py  hmm.py  mim.py  modular.py  neural.py  search.py
scala/generic-maven/: pom.xml
scala/generic-maven-plugin/: .gitignore  pom.xml
scala/generic-maven-plugin/basic-plugin/: pom.xml
scala/generic-maven-plugin/plugin/: pom.xml
scala/generic-maven-plugin/plugin/src/main/resources/: scalac-plugin.xml
scala/generic-maven/basic/: pom.xml
tex/apa/: main.tex
tex/book/: common.sty  main.tex  make.sh
tex/book/generic-chapter/: ex-ch.tex
tex/letter/: main.tex
tex/notes/: common.sty  main.tex
tex/string/: string.sty
vim/: coc-settings.json  coc_setup.md  metals_setup.md  readme.md  vim-plug_settup.md  vimrc
web/react/: setup.sh
web/react/html/: hello.html
zsh/: README.md
(+2 files in other folders)
